keeper page works

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,9 +1,10 @@
 doctype 5
 html
-  head
-    title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
-  body
-    block content
-    block scripts
-        script(type='text/javascript', src='http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js')
+	head
+		title= title
+		link(rel='stylesheet', href='/stylesheets/style.css')
+		block inlineScripts
+	body
+		block content
+		block scripts
+			script(type='text/javascript', src='http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js')
