--- a/views/team.jade
+++ b/views/team.jade
@@ -50,17 +50,18 @@ block content
 		tbody
 		-each pl in players
 			tr.player
-				td= pl.playerName
-				td= pl.salary2013
-				td= pl.lockedUp.salary > 0 ? pl.lockedUp.salary : pl.salary2014
-				td
-					-var checked = pl.minorLeaguer || pl.isKeeper2014 || pl.lockedUp.salary > 0;
-					-var disabled = pl.minorLeaguer || pl.lockedUp.salary > 0 || user == null || user.team != team.team
-					-var playerValue = pl.lockedUp.salary > 0 ? pl.lockedUp.salary : pl.salary2014;
-					input.keeperBox(type="checkbox" value=playerValue onclick="changeTotal(this)" checked=checked disabled=disabled)
-				-if(pl.lockedUp.salary > 0)
-					td Locked Up
-				-if(pl.minorLeaguer)
-					td Minor Leaguer
+				td= pl.name_display_first_last
+				td= pl.history[0].salary
+				-var salary2014 = pl.history[0].locked_up ? pl.history[0].salary : pl.history[0].salary + 3;
+				td= salary2014
+				//td
+					//-var checked = pl.minorLeaguer || pl.isKeeper2014 || pl.lockedUp.salary > 0;
+					//-var disabled = pl.minorLeaguer || pl.lockedUp.salary > 0 || user == null || user.team != team.team
+					//-var playerValue = pl.lockedUp.salary > 0 ? pl.lockedUp.salary : pl.salary2014;
+					/input.keeperBox(type="checkbox" value=playerValue onclick="changeTotal(this)" checked=checked disabled=disabled)
+				//-if(pl.lockedUp.salary > 0)
+				//	td Locked Up
+				//-if(pl.minorLeaguer)
+				//	td Minor Leaguer
 	
 	
