--- a/views/signup.jade
+++ b/views/signup.jade
@@ -3,4 +3,6 @@ form(id="signup", method="POST", action="/signup")
 	input#email(type='text', name='email')
 	label(for='password') Password
 	input#password(type='password', name='password')
+	label(for='team') Team
+	input#team(type='text' name='team')
 	input(type="submit", value="SignUp")
