--- a/views/home.jade
+++ b/views/home.jade
@@ -2,21 +2,17 @@ extends layout
 
 block content
 	if user !== null
-		h1 I'm Embarrassed Most By #{user}
-		a(href="/logout") Logout
-		br
+		h1= user.team
 		a(href="/profile") Profile
 	else
 		h1 Homer At The Bat
-		br
-		a(href="/login") Login
-		br
 		a(href="/signup") SignUp
 	
+	br
 	-for(var i = 0; i < teams.length; i++) {
 	-	var teamName = teams[i].fullName;
 	-	var teamCode = teams[i].team;
-		<br>
+		br
 		a(href="/team/" + teamCode)= teamName
 	-}
 
