--- a/views/team.jade
+++ b/views/team.jade
@@ -1,6 +1,7 @@
 extends layout
 block inlineScripts
 	script.
+		var teams = JSON.parse($.find('#chartData')[0].value);
 		var changeTotal = function(checkbox) {
 			var change = parseInt(checkbox.value);
 			if(!checkbox.checked) {
@@ -12,7 +13,7 @@ block inlineScripts
 				alert("Max number of keepers is 10");
 			} else {
 				curTotal += change;
-				$('#total').text("Total: " + curTotal);
+				$('#total').text("Keeper Salary Total: " + curTotal);
 			}
 		};
 
@@ -36,16 +37,56 @@ block inlineScripts
 			});
 		};
 
+		var teamNames = [];
+		var keepers = { name: 'Keepers', data: [] };
+		$(teams).each(function(index, obj) {
+			teamNames.push(obj.team);
+			keepers.data.push(obj.history[obj.history.length-1].keeper_total > 0 ? obj.history[obj.history.length-1].keeper_total : 0);
+		});
+		$(function () {
+			$('#chartContainer').highcharts({
+				chart: {
+					type: 'column'
+				},
+				title: {
+					text: '2014 Keeper Dollars'
+				},
+				xAxis: {
+					categories: teamNames
+				},
+				yAxis: {
+					max: 260,
+					title: {
+						text: 'Dollars Spent'
+					}
+				},
+				legend: {
+					backgroundColor: '#FFFFFF',
+					reversed: true
+				},
+				plotOptions: {
+					series: {
+						stacking: 'normal'
+					}
+				},
+				series: [keepers]
+			});
+		});
+    
+
 block content
 	h1= team.fullName
+	-var str = JSON.stringify(teamList);
+	input(type='hidden', id="chartData", value=str)
+	//div#chartContainer
 	h3#total 
-		='Total: '
-		=team.keeper2014Total
+		='Keeper Salary Total: '
+		=team.history[team.history.length-1].keeper_total
 		
 	h3#saveButton
 		-if(user != null && user.team == team.team)
 			input.saveChanges(type="button" value="Save Selections" onclick="saveChanges()")
-			
+
 	table
 		thead
 			th Name
@@ -89,5 +130,12 @@ block content
 					td Locked Up
 				-if(pl.history[0].minor_leaguer)
 					td Minor Leaguer
-	
+	table
+		thead
+			th Assets
+		tbody
+		-each asset in assets
+			tr
+				td= asset.type
+				td= asset.draft_round
 	
