--- a/views/login.jade
+++ b/views/login.jade
@@ -1,9 +1,12 @@
-form(action='/login', method='post')
-	div
-		label Email:
-		input(type='text', name='email')
-	div
-		label Password:
-		input(type='password', name='password')
-	div
-		input(type='submit', value='Log In')
+extends layout
+
+block content
+	form(action='/login', method='post')
+		div
+			label Email:
+			input(type='text', name='email')
+		div
+			label Password:
+			input(type='password', name='password')
+		div
+			input(type='submit', value='Log In')
