--- a/views/profile.jade
+++ b/views/profile.jade
@@ -1,8 +1,12 @@
-h1 #{user.firstName} #{user.lastName}
+extends layout
 
-if user.name
-	h1 #{user.name}'s Profile
-else
-	h1 #{user.email}'s Profile
+block content
 
-a(href="/logout") Logout
+	h1 #{user.firstName} #{user.lastName}
+
+	if user.name
+		h1 #{user.name}'s Profile
+	else
+		h1 #{user.email}'s Profile
+
+	a(href="/logout") Logout
