--- a/views/signup.jade
+++ b/views/signup.jade
@@ -1,8 +1,11 @@
-form(id="signup", method="POST", action="/signup")
-	label(for='email') Email
-	input#email(type='text', name='email')
-	label(for='password') Password
-	input#password(type='password', name='password')
-	label(for='team') Team
-	input#team(type='text' name='team')
-	input(type="submit", value="SignUp")
+extends layout
+
+block content
+	form(id="signup", method="POST", action="/signup")
+		label(for='email') Email
+		input#email(type='text', name='email')
+		label(for='password') Password
+		input#password(type='password', name='password')
+		label(for='team') Team
+		input#team(type='text' name='team')
+		input(type="submit", value="SignUp")
