--- a/views/team.jade
+++ b/views/team.jade
@@ -78,17 +78,17 @@ block content
 	h1= team.fullName
 	-var str = JSON.stringify(teamList);
 	input(type='hidden', id="chartData", value=str)
-	//div#chartContainer
 	h3#total 
 		='Keeper Salary Total: '
 		=team.history[team.history.length-1].keeper_total
 		
 	h3#saveButton
-		-if(user != null && user.team == team.team)
+		-if(isTeamOwner)
 			input.saveChanges(type="button" value="Save Selections" onclick="saveChanges()")
 
 	table
 		thead
+			th Position
 			th Name
 			-var lastYear = parseInt(year) - 1;
 			-var lastYearHeader = "Salary " + lastYear;
@@ -99,37 +99,26 @@ block content
 		tbody
 		-each pl in players
 			tr("minor_leaguer"= pl.history[0].minor_leaguer ? "true" : "false").player
+				td= pl.position_txt
 				td= pl.name_display_first_last
-				-var salaryLastYear = '';
-				-var salaryNextYear = '';
-				-for(var i = 0; i < pl.history.length; i++) {
-				-	if(pl.history[i].year == 2013) {
-				-		salaryLastYear = pl.history[i].salary;
-				-		if(pl.history[i].locked_up) {
-				-			salaryNextYear = salaryLastYear;
-				-		}
-				-	}
-				-}
-				-for(var i = 0; i < pl.history.length; i++) {
-				-	if(pl.history[i].year == 2014) {
-				-		if(pl.history[i].locked_up || pl.history[i].minor_leaguer) {
-				-			salaryNextYear = salaryLastYear;
-				-		}
-				-	}
-				-}
-				-if(salaryNextYear == '') {
-				-	salaryNextYear = salaryLastYear + 3;
-				-}
-				td= salaryLastYear
-				td= salaryNextYear
+				td= pl.salaryLastYear
+				td= pl.salaryNextYear
 				td
 					-var checked = pl.history[0].minor_leaguer || pl.history[0].locked_up || (pl.history[1] != null && pl.history[1].keeper_team != undefined && pl.history[1].keeper_team != '');
 					-var disabled = pl.history[0].minor_leaguer || pl.history[0].locked_up || user == null || user.team != team.team;
-					input.keeperBox(type="checkbox" value=salaryNextYear onclick="changeTotal(this)" checked=checked disabled=disabled)
+					input.keeperBox(type="checkbox" value=pl.salaryNextYear onclick="changeTotal(this)" checked=checked disabled=disabled)
+				-var note = '';
 				-if(pl.history[0].locked_up)
-					td Locked Up
+					note = 'Locked Up';
 				-if(pl.history[0].minor_leaguer)
-					td Minor Leaguer
+					note = 'Minor Leaguer';
+				td= note
+				-if(!isTeamOwner && pl.fantasy_status_code != undefined && pl.fantasy_status_code != pl.status_code && pl.vulture.is_vultured == false)
+					-var vultureString = "/gm/vulture/" + pl.player_id;
+					td
+						a(href=vultureString)  Vulturable
+				-else if(!isTeamOwner && pl.vulture.is_vultured == true)
+					td Vultured
 	table
 		thead
 			th Assets
@@ -138,4 +127,12 @@ block content
 			tr
 				td= asset.type
 				td= asset.draft_round
+
+	table
+		thead
+			th Open Vultures
+		tbody
+		-each vulture in vultures
+			tr
+				td= vulture.name_display_first_last
 	
