--- a/views/admin.jade
+++ b/views/admin.jade
@@ -1,4 +1,26 @@
 extends layout
 
+block inlineScripts
+	script.
+		var getPlayers = function(searchString) {
+			var payload = { searchString: searchString };
+			$.post("/admin/player/search", payload, function(result) {
+				$('#results').empty();
+				for(var i = 0; i < result.length; i++) {
+					$('#results').append("<li><a href='/admin/player/" + 
+						result[i].player_id + "'>" +
+						result[i].name_display_first_last + "</a></li>");
+				}
+			});
+		};		
+
+		$('#name').on('change', function() {
+			getPlayers($('#name').val());
+		});
+
 block content
-	| Hello this is the admin page
+	div
+		label(for='name') Name
+		input(id="name" type="text" name="name")
+
+	div#results
