--- a/views/team.jade
+++ b/views/team.jade
@@ -1,151 +1,5 @@
 extends layout
-block inlineScripts
-	script.
-		var teams = JSON.parse($.find('#chartData')[0].value);
-		var changeTotal = function(checkbox) {
-			var change = parseInt(checkbox.value);
-			if(!checkbox.checked) {
-				change *= -1;
-			}
-			var curTotal = parseInt($('#total').text().split(":")[1]);
-			if($('.player[minor_leaguer="false"]').find('input:checked').length > 10) {
-				checkbox.checked = false;
-				alert("Max number of keepers is 10");
-			} else {
-				curTotal += change;
-				$('#total').text("Keeper Salary Total: " + curTotal);
-			}
-		};
-
-		var saveChanges = function() {
-			var payload = { team: 'GOB', total : 0, keepers: [], nonkeepers: [] }
-			payload.total = parseInt($('#total').text().split(":")[1]);
-
-			var players = $('.player');
-			for(var i = 0; i < players.length; i++) {
-				var name = players.eq(i).find('td#playerName').eq(0).text();
-				if(players.eq(i).find("input[type=checkbox]:checked").length != 0) {
-					payload.keepers.push(name);
-				} else {
-					payload.nonkeepers.push(name);
-				}
-			}
-			$.post("/gm/keeper", payload, function(result) {
-				if(result == "worked") {
-					alert('Your preferences have been saved');
-				}
-			});
-		};
-
-		var teamNames = [];
-		var keepers = { name: 'Keepers', data: [] };
-		$(teams).each(function(index, obj) {
-			teamNames.push(obj.team);
-			keepers.data.push(obj.history[obj.history.length-1].keeper_total > 0 ? obj.history[obj.history.length-1].keeper_total : 0);
-		});
-		$(function () {
-			$('#chartContainer').highcharts({
-				chart: {
-					type: 'column'
-				},
-				title: {
-					text: '2014 Keeper Dollars'
-				},
-				xAxis: {
-					categories: teamNames
-				},
-				yAxis: {
-					max: 260,
-					title: {
-						text: 'Dollars Spent'
-					}
-				},
-				legend: {
-					backgroundColor: '#FFFFFF',
-					reversed: true
-				},
-				plotOptions: {
-					series: {
-						stacking: 'normal'
-					}
-				},
-				series: [keepers]
-			});
-		});
-    
 
 block content
-	h1= team.fullName
-	-var str = JSON.stringify(teamList);
-	input(type='hidden', id="chartData", value=str)
-	h3#total 
-		='Keeper Salary Total: '
-		=team.history[team.history.length-1].keeper_total
-		
-	h3#saveButton
-		-if(isTeamOwner)
-			input.saveChanges(type="button" value="Save Selections" onclick="saveChanges()")
-
-	div#tradeButton
-		-if(!isTeamOwner)
-			-var tradeString = "/gm/trade/team/" + team.team;
-			a(href=tradeString) Trade
-
-	table
-		thead
-			th Position
-			th Name
-			-var lastYear = parseInt(year) - 1;
-			-var lastYearHeader = "Salary " + lastYear;
-			-var thisYearHeader = "Salary " + year;
-			th= lastYearHeader
-			th= thisYearHeader
-			th Select as Keeper
-		tbody
-		-each pl in players
-			tr("minor_leaguer"= pl.history[0].minor_leaguer ? "true" : "false").player
-				td= pl.position_txt
-				td#playerName
-					-if(user != undefined && user.role == 'admin')
-						-var adminString = "/admin/player/" + pl.player_id;
-						a(href=adminString)= pl.name_display_first_last
-					-else
-						= pl.name_display_first_last
-				td= pl.salaryLastYear
-				td= pl.salaryNextYear
-				td
-					-var checked = pl.history[0].minor_leaguer || pl.history[0].locked_up || (pl.history[1] != null && pl.history[1].keeper_team != undefined && pl.history[1].keeper_team != '');
-					-var disabled = pl.history[0].minor_leaguer || pl.history[0].locked_up || user == null || user.team != team.team;
-					input.keeperBox(type="checkbox" value=pl.salaryNextYear onclick="changeTotal(this)" checked=checked disabled=disabled)
-				-var note = '';
-				-if(pl.history[0].locked_up)
-					note = 'Locked Up';
-				-if(pl.history[0].minor_leaguer)
-					note = 'Minor Leaguer';
-				td= note
-				-if(!isTeamOwner && pl.isVulturable)
-					-var vultureString = "/gm/vulture/" + pl.player_id;
-					td
-						a(href=vultureString)  Vulturable
-				-else if(!isTeamOwner && pl.isVultured)
-					td Vultured
-	table
-		thead
-			th Assets
-		tbody
-		-each asset in assets
-			tr
-				td= asset.type
-				td= asset.value
-
-	table
-		thead
-			th Open Vultures
-		tbody
-		-each vulture in vultures
-			tr
-				td= vulture.name_display_first_last
-				td
-					-var fixString = "/gm/vulture/" + vulture.player_id
-					a(href=fixString) Mark as fixed
-	
+	include partials/team
+	mixin team(team, players, assets, false, 2013)
