keeper locked up

--- a/views/partials/player.jade
+++ b/views/partials/player.jade
@@ -7,7 +7,8 @@ mixin player(player, includeCheckbox)
 	td
 		= player.name_display_first_last
 	td
-		= player.history[1].salary
+		-if(!player.history[0].minor_leaguer)
+			= player.history[0].salary
 	-if(includeCheckbox)
 		td
 			input(type="checkbox" value=player.player_id)
