--- a/views/partials/team.jade
+++ b/views/partials/team.jade
@@ -1,7 +1,6 @@
 include player
-include assets
 
-mixin miniPlayer(player, position)
+mixin miniPlayer(player, position, includeCheckbox)
 	-if(player != undefined)
 		tr(id='player_' + player.player_id)
 			mixin player(player, includeCheckbox)
@@ -11,41 +10,38 @@ mixin miniPlayer(player, position)
 			td (Empty)
 				
 
-mixin team(team, players, assets, includeCheckbox, year)
-	div(style="float:left")
-		p= team.fullName
-		div
-			table(id='players_' + team.team)
-				thead
-					th Position
-					th Player
-					th= "Salary (" + year + ")"
-					-if(includeCheckbox)
-						th Select
-				tbody
-					-var player
-					-each player in players.catchers
-						tr(id='player_' + player.player_id)
-							mixin player(player, includeCheckbox)
-					mixin miniPlayer(players.first_base)
-					mixin miniPlayer(players.second_base, '2B')
-					mixin miniPlayer(players.third_base, '3B')
-					mixin miniPlayer(players.shortstop, '3B')
-					mixin miniPlayer(players.middle_infield, '2B/SS')
-					mixin miniPlayer(players.corner_infield, '1B/3B')
-					mixin miniPlayer(players.outfielders[0], 'OF')
-					mixin miniPlayer(players.outfielders[1], 'OF')
-					mixin miniPlayer(players.outfielders[2], 'OF')
-					mixin miniPlayer(players.outfielders[3], 'OF')
-					mixin miniPlayer(players.outfielders[4], 'OF')
-					mixin miniPlayer(players.pitchers[0], 'P')
-					mixin miniPlayer(players.pitchers[1], 'P')
-					mixin miniPlayer(players.pitchers[2], 'P')
-					mixin miniPlayer(players.pitchers[3], 'P')
-					mixin miniPlayer(players.pitchers[4], 'P')
-					mixin miniPlayer(players.pitchers[5], 'P')
-					mixin miniPlayer(players.pitchers[6], 'P')
-					mixin miniPlayer(players.pitchers[7], 'P')
-					mixin miniPlayer(players.pitchers[8], 'P')
-
-			mixin assets(assets, false)
+mixin team(team, players, includeCheckbox, year)
+	table(id='players_' + team.team)
+		thead
+			th Position
+			th Player
+			th= "Salary (" + year + ")"
+			-if(includeCheckbox)
+				th Select
+		tbody
+			mixin miniPlayer(players.catchers[0], 'C', includeCheckbox)
+			mixin miniPlayer(players.catchers[1], 'C', includeCheckbox)
+			mixin miniPlayer(players.first_base, '1B', includeCheckbox)
+			mixin miniPlayer(players.second_base, '2B', includeCheckbox)
+			mixin miniPlayer(players.third_base, '3B', includeCheckbox)
+			mixin miniPlayer(players.shortstop, '3B', includeCheckbox)
+			mixin miniPlayer(players.middle_infield, '2B/SS', includeCheckbox)
+			mixin miniPlayer(players.corner_infield, '1B/3B', includeCheckbox)
+			mixin miniPlayer(players.outfielders[0], 'OF', includeCheckbox)
+			mixin miniPlayer(players.outfielders[1], 'OF', includeCheckbox)
+			mixin miniPlayer(players.outfielders[2], 'OF', includeCheckbox)
+			mixin miniPlayer(players.outfielders[3], 'OF', includeCheckbox)
+			mixin miniPlayer(players.outfielders[4], 'OF', includeCheckbox)
+			mixin miniPlayer(players.utility, 'U', includeCheckbox)
+			mixin miniPlayer(players.pitchers[0], 'P', includeCheckbox)
+			mixin miniPlayer(players.pitchers[1], 'P', includeCheckbox)
+			mixin miniPlayer(players.pitchers[2], 'P', includeCheckbox)
+			mixin miniPlayer(players.pitchers[3], 'P', includeCheckbox)
+			mixin miniPlayer(players.pitchers[4], 'P', includeCheckbox)
+			mixin miniPlayer(players.pitchers[5], 'P', includeCheckbox)
+			mixin miniPlayer(players.pitchers[6], 'P', includeCheckbox)
+			mixin miniPlayer(players.pitchers[7], 'P', includeCheckbox)
+			mixin miniPlayer(players.pitchers[8], 'P', includeCheckbox)
+			-if(players.minor_leaguers != undefined)
+				-for(var i = 0; i < players.minor_leaguers.length; i++)
+						mixin miniPlayer(players.minor_leaguers[i], 'ML', includeCheckbox)
